# rust-git

./: Cargo.toml  LICENSE  README.md  conf.yaml  rustit-conf.yaml
src/: main.rs
