[package]
name = "git-rust"
version = "0.1.0"
authors = ["OgulcanCankaya <ogulcan985@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.10"
docopt = "1"
serde = {version = "1" , features = ["derive"]}
openssl = {version = "0.10" , features = ["vendored"] }
serde_yaml = "0.8"
yaml-rust = "0.4"
clap = "2"
itertools = "0.8.0"
gag = "0.1.10"